add calendar functionality
The calendar events and tags functionality is mostly finished. Need to add search and filter function later.